@@ -1,0 +1,186 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <string name="app_name">Linux Deploy</string>
+    <string name="menu_start">BẮT ĐẦU</string>
+    <string name="menu_stop">DỪNG</string>
+    <string name="menu_properties">Thuộc tính</string>
+    <string name="menu_settings">Cài đặt</string>
+    <string name="menu_about">Thông tin</string>
+    <string name="menu_donate">Ủng hộ</string>
+    <string name="menu_exit">Thoát</string>
+    <string name="menu_status">Trạng thái</string>
+    <string name="menu_clear">Xoá màn hình</string>
+    <string name="menu_new">Mới</string>
+    <string name="menu_edit">Sửa</string>
+    <string name="menu_discard">Xoá</string>
+    <string name="menu_import">Nhập</string>
+    <string name="menu_export">Xuất</string>
+    <string name="menu_markall">Đánh dấu tất cả</string>
+    <string name="menu_clearall">Xoá tất cả</string>
+    <string name="notification_current_profile">Hồ sơ hiện tại</string>
+    <string name="title_activity_main">Linux Deploy</string>
+    <string name="title_activity_about">Thông tin</string>
+    <string name="title_activity_settings">Cài đặt</string>
+    <string name="title_activity_properties">Các thuộc tính</string>
+    <string name="title_activity_profiles">Hồ sơ</string>
+    <string name="title_activity_scripts">Tập lệnh</string>
+    <string name="title_activity_mounts">Gắn kết</string>
+    <string name="confirm_start_title">Bắt đầu</string>
+    <string name="confirm_stop_title">Dừng</string>
+    <string name="confirm_start_message">Gắn kết hệ thống GNU/Linux và bắt đầu dịch vụ chứ?</string>
+    <string name="confirm_stop_message">Dừng dịch vụ và huỷ gắn kết hệ thống GNU/Linux chứ?</string>
+    <string name="new_profile_title">Tên hồ sơ</string>
+    <string name="edit_profile_title">Tên hồ sơ</string>
+    <string name="import_profile_title">Nhập hồ sơ</string>
+    <string name="export_profile_title">Xuất hồ sơ</string>
+    <string name="toast_import_profile_success">Nhập hồ sơ thành công.</string>
+    <string name="toast_import_profile_error">Có lỗi trong khi nhập hồ sơ!</string>
+    <string name="toast_export_profile_success">Xuất hồ sơ thành công.</string>
+    <string name="toast_export_profile_error">Có lỗi trong khi xuất hồ sơ!</string>
+    <string name="confirm_profile_discard_title">Xoá hồ sơ</string>
+    <string name="confirm_profile_discard_message">Xoá hồ sơ đã chọn?</string>
+    <string name="new_script_title">Đường dẫn tập lệnh</string>
+    <string name="edit_script_title">Đường dẫn tập lệnh</string>
+    <string name="confirm_script_discard_title">Gỡ bỏ tập lệnh</string>
+    <string name="confirm_script_discard_message">Gỡ bỏ tập lệnh đã chọn?</string>
+    <string name="new_mount_title">Điểm gắn kết</string>
+    <string name="edit_mount_title">Điểm gắn kết</string>
+    <string name="confirm_mount_discard_title">Xoá điểm</string>
+    <string name="confirm_mount_discard_message">Xoá điểm đã chọn?</string>
+    <string name="app_preferences">Ứng dụng</string>
+    <string name="title_screenlock_preference">Khoá màn hình</string>
+    <string name="summary_screenlock_preference">Giữ màn hình sáng khi ứng dụng đang chạy</string>
+    <string name="title_wifilock_preference">Khoá Wi-Fi</string>
+    <string name="summary_wifilock_preference">Giữ Wi-Fi hoạt động khi ứng dụng đang chạy</string>
+    <string name="title_language_preference">Ngôn ngữ</string>
+    <string name="dialog_title_language_preference">Chọn ngôn ngữ</string>
+    <string name="title_fontsize_preference">Cỡ chữ</string>
+    <string name="dialog_title_fontsize_preference">Cỡ chữ</string>
+    <string name="title_maxline_preference">Cỡ lăn (chuột)</string>
+    <string name="dialog_title_maxline_preference">Cỡ lăn (chuột)</string>
+    <string name="title_theme_preference">Giao diện</string>
+    <string name="dialog_title_theme_preference">Chọn giao diện</string>
+    <string name="title_appicon_preference">Hiện biểu tượng</string>
+    <string name="summary_appicon_preference">Hiện biểu tượng trên thanh thông báo</string>
+    <string name="title_autostart_preference">Tự khởi động</string>
+    <string name="summary_autostart_preference">Tự khởi động GNU/Linux khi mở nguồn</string>
+    <string name="env_preferences">Môi trường điều hành</string>
+    <string name="title_installdir_preference">Đường dẫn ENV</string>
+    <string name="dialog_title_installdir_preference">Đường dẫn ENV</string>
+    <string name="title_builtinshell_preference">Xây dựng trong shell</string>
+    <string name="summary_builtinshell_preference">Sử dụng xây dựng trong BusyBox</string>
+    <string name="title_symlink_preference">Tạo liên kết tượng trưng</string>
+    <string name="summary_symlink_preference">Tạo một liên kết tượng trưng trên linuxdeploy trong Android</string>
+    <string name="title_installenv_preference">Cập nhật ENV</string>
+    <string name="summary_installenv_preference">Cập nhật môi trường điều hành</string>
+    <string name="message_installenv_confirm_dialog">Cập nhật môi trường điều hành chứ?</string>
+    <string name="title_removeenv_preference">Xoá ENV</string>
+    <string name="summary_removeenv_preference">Xoá môi trường điều hành</string>
+    <string name="message_removeenv_confirm_dialog"> Xoá môi trường điều hành chứ?</string>
+    <string name="debug_preferences">Gỡ lỗi</string>
+    <string name="title_debug_preference">Chế độ gỡ lỗi</string>
+    <string name="summary_debug_preference">Hiện thông tin gỡ lỗi</string>
+    <string name="title_trace_preference">Chế độ dấu vết</string>
+    <string name="summary_trace_preference">Bật chế độ dấu vết</string>
+    <string name="title_logs_preference">Nhật kí</string>
+    <string name="summary_logs_preference">Lưu nhật kí vào một tệp tin</string>
+    <string name="title_logfile_preference">Tệp nhật kí</string>
+    <string name="dialog_title_logfile_preference">Tệp nhật kí</string>
+    <string name="action_preferences">Hành động</string>
+    <string name="title_install_preference">Cài đặt</string>
+    <string name="summary_install_preference">Bắt đầu cài đặt GNU/Linux</string>
+    <string name="message_install_confirm_dialog">Bắt đầu cài đặt hệ thống GNU/Linux?</string>
+    <string name="title_reconfigure_preference">Cấu hình lại</string>
+    <string name="summary_reconfigure_preference">Bắt đầu cấu hình lại GNU/Linux</string>
+    <string name="message_reconfigure_confirm_dialog">Bắt đầu cấu hình lại hệ thống GNU/Linux?</string>
+    <string name="title_export_preference">Xuất</string>
+    <string name="summary_export_preference">Xuất GNU/Linux như là file nén rootfs</string>
+    <string name="deploy_preferences">Deploy</string>
+    <string name="title_distribution_preference">Bản phân phối</string>
+    <string name="dialog_title_distribution_preference">Bản phân phối</string>
+    <string name="title_suite_preference">Bộ phân phối</string>
+    <string name="dialog_title_suite_preference">Bộ phân phối</string>
+    <string name="title_mirror_preference">URL phụ</string>
+    <string name="dialog_title_mirror_preference">URL phụ</string>
+    <string name="title_architecture_preference">Chuẩn nén</string>
+    <string name="dialog_title_architecture_preference">Chuẩn nén</string>
+    <string name="title_deploytype_preference">Loại cài đặt</string>
+    <string name="dialog_title_deploytype_preference">Loại cài đặt</string>
+    <string name="title_diskimage_preference">Đường dẫn cài đặt</string>
+    <string name="dialog_title_diskimage_preference">Đường dẫn cài đặt</string>
+    <string name="title_disksize_preference">Kíc thước đĩa (MB)</string>
+    <string name="dialog_title_disksize_preference">Kích thước đĩa (MB)</string>
+    <string name="summary_disksize_preference">Tự động tính kích thước</string>
+    <string name="title_fstype_preference">Tệp tin hệ thống</string>
+    <string name="dialog_title_fstype_preference">Tệp tin hệ thống</string>
+    <string name="title_username_preference">Tên người dùng</string>
+    <string name="dialog_title_username_preference">Tên người dùng</string>
+    <string name="title_password_preference">Người dùng mật khẩu</string>
+    <string name="dialog_title_password_preference">Người dùng mật khẩu</string>
+    <string name="title_serverdns_preference">Máy chủ DNS</string>
+    <string name="dialog_title_serverdns_preference">Địa chỉ máy chủ DNS</string>
+    <string name="summary_serverdns_preference">Tự động nhận diện</string>
+    <string name="title_locale_preference">Vị trí</string>
+    <string name="dialog_title_locale_preference">Vị trí</string>
+    <string name="title_desktopenv_preference">Môi trường Desktop</string>
+    <string name="dialog_title_desktopenv_preference">Môi trường Desktop</string>
+    <string name="dialog_title_components_preference">Các thành phần</string>
+    <string name="summary_components_preference"> Chọn các thành phần để cài đặt</string>
+    <string name="title_components_preference">Chọn các thành phần</string>
+    <string name="startup_preferences">Khởi động</string>
+    <string name="title_sshstartup_preference">SSH</string>
+    <string name="summary_sshstartup_preference">Cho phép khởi động máy chủ SSH</string>
+    <string name="title_sshproperties_preference">Tuỳ chọn SSH</string>
+    <string name="summary_sshproperties_preference">Thay đổi cài đặt cho máy chủ  SSH</string>
+    <string name="title_guistartup_preference">GUI</string>
+    <string name="summary_guistartup_preference">Cho phép khởi động môi trường đồ hoạ</string>
+    <string name="title_guitype_preference">Hệ thống đồ hoạ con</string>
+    <string name="dialog_title_guitype_preference">Hệ thống đồ hoạ con</string>
+    <string name="title_guiproperties_preference">Cài đặt GUI</string>
+    <string name="summary_guiproperties_preference">Thay đổi cài đặt cho hệ thống đồ hoạ con</string>
+    <string name="title_customstartup_preference">Tập lệnh tuỳ biến</string>
+    <string name="summary_customstartup_preference">Bật thực thi tập lệnh tuỳ biến</string>
+    <string name="title_scriptseditor_preference">Danh sách tập lệnh</string>
+    <string name="summary_scriptseditor_preference">Sửa danh sách tập lệnh tuỳ biến</string>
+    <string name="title_custommount_preference">Gắn kết tuỳ biến</string>
+    <string name="summary_custommount_preference">Cho phép gắn kết các tài nguyên Android</string>
+    <string name="title_mountseditor_preference">Các điểm gắn kết</string>
+    <string name="summary_mountseditor_preference">Chỉnh sửa danh sách điểm gắn kết</string>
+    <string name="ssh_preferences">SSH</string>
+    <string name="title_sshport_preference">Cổng</string>
+    <string name="dialog_title_sshport_preference">SSH: cổng</string>
+    <string name="vnc_preferences">VNC</string>
+    <string name="title_vncdisplay_preference">Hiển thị</string>
+    <string name="dialog_title_vncdisplay_preference">VNC: số lượng hiển thị</string>
+    <string name="title_vncdepth_preference">Chiều sâu (bits)</string>
+    <string name="dialog_title_vncdepth_preference">VNC: chiều sâu (bits)</string>
+    <string name="title_vncdpi_preference">DPI</string>
+    <string name="dialog_title_vncdpi_preference">VNC: điểm ảnh trên inch (DPI)</string>
+    <string name="title_vncwidth_preference">Chiều rộng</string>
+    <string name="dialog_title_vncwidth_preference">VNC: chiều rộng màn hình</string>
+    <string name="title_vncheight_preference">Chiều cao</string>
+    <string name="dialog_title_vncheight_preference">VNC: chiều cao màn hình</string>
+    <string name="title_vncargs_preference">Tuỳ chọn VNC</string>
+    <string name="dialog_title_vncargs_preference">VNC:  tuỳ chọn máy chủ vnc</string>
+    <string name="xserver_preferences">Hệ thống X Window</string>
+    <string name="title_xdisplay_preference">Hiển thị</string>
+    <string name="dialog_title_xdisplay_preference">X: số hiển thị</string>
+    <string name="title_xhost_preference">Địa chỉ máy chủ X</string>
+    <string name="dialog_title_xhost_preference">X: IP hoặc tên máy chủ</string>
+    <string name="fb_preferences">Khung đệm</string>
+    <string name="title_fbdisplay_preference">Hiển thị</string>
+    <string name="dialog_title_fbdisplay_preference">FB: hiển thị số</string>
+    <string name="title_fbdpi_preference">DPI</string>
+    <string name="dialog_title_fbdpi_preference">FB:   điểm ảnh trên inch (DPI)</string>
+    <string name="title_fbdev_preference">Thiết bị Video</string>
+    <string name="dialog_title_fbdev_preference">FB: đường dẫn thiết bị video</string>
+    <string name="title_fbinput_preference">Thiết bị nhập liệu</string>
+    <string name="dialog_title_fbinput_preference">FB: đường dẫn thiết bị nhập liệu</string>
+    <string name="title_fbargs_preference">Tuỳ chọn X</string>
+    <string name="dialog_title_fbargs_preference">FB: tuỳ chọn X</string>
+    <string name="title_fbfreeze_preference">Đóng băng giao diện người dùng Android</string>
+    <string name="dialog_title_fbfreeze_preference">Đóng băng giao diện người dùng Android</string>
+    <string name="about_text"><font size="32"><b>Linux Deploy</b></font>\n\nGPL v3\n\n[ <a href="https://github.com/meefik/linuxdeploy">github.com</a> , <a href="http://4pda.ru/forum/index.php?showtopic=378043">4pda.ru</a> ]\n\nChương trình này KHÔNG CÓ BẢO HÀNH. Đây là phần mềm miễn phí, và bạn được phép phân phối lại dưới một số điều kiện.\n\n&#169;2012-2015 Anton Skshidlevsky</string>
+    
+</resources>
