@@ -8,6 +8,7 @@
         <item>Italiano</item>
         <item>Español</item>
         <item>简体中文</item>
+        <item>Tiếng Việt</item>
     </string-array>
     <string-array name="language_values" translatable="false">
         <item>en</item>
@@ -16,6 +17,7 @@
         <item>it</item>
         <item>es</item>
         <item>zh</item>
+        <item>vi</item>
     </string-array>
     <string-array name="theme_entries">
         <item>Dark</item>
